updates links to example links

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ nginx running.<br />
 <a href="hhvm.php">Check hhvm</a><br />
 <a href="db.php">Check mysql</a><br />
 <br />
-<a href="//vps1.med.ucf.edu">Switch to VPS1</a><br />
-<a href="//vps2.med.ucf.edu">Switch to VPS2</a><br />
+<a href="//vps1.address.com">Switch to VPS1</a><br />
+<a href="//vps2.address.com">Switch to VPS2</a><br />
 </body>
 </html>
