--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
 </section>
 
 <nav>
-	<section><a href="//vps1.address.com"><i class="material-icons">computer</i>Switch to VPS1</a></section>
-	<section><a href="//vps2.address.com"><i class="material-icons">computer</i>Switch to VPS2</a></section>
+	<section><a href="//vps1.med.ucf.edu"><i class="material-icons">computer</i>Switch to VPS1</a></section>
+	<section><a href="//vps2.med.ucf.edu"><i class="material-icons">computer</i>Switch to VPS2</a></section>
 </nav>
 
 <footer>
