--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
 <nav>
 	<section><a href="//vps1.med.ucf.edu"><i class="material-icons">computer</i>Switch to VPS1</a></section>
 	<section><a href="//vps2.med.ucf.edu"><i class="material-icons">computer</i>Switch to VPS2</a></section>
+	<section><a href="//vps3.med.ucf.edu"><i class="material-icons">computer</i>Switch to VPS3</a></section>
 </nav>
 
 <footer>
